<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="create_gift_action">Create gift</string>
    <string name="my_gifts">My Gifts</string>
    <string name="all_gifts">All</string>
    <string name="search_gifts">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="get_from_galery">Get from galery</string>
    <string name="make_new_phote">Make new photo</string>
    <string name="title_activity_create_gift">Create Gift</string>
    <string name="action_settings">Settings</string>
    <string name="Gift_image">Gift image</string>
    <string name="sending_">Sending&#8230;</string>
    <string name="cancelling_">Cancelling&#8230;</string>
    <string name="sending_was_cancelled">Sending was cancelled</string>
    <string name="enter_some_words_as_a_title">Enter some words as a title</string>
    <string name="update_every_">Update every:</string>
    <string name="_1_minute">1 minute</string>
    <string name="_5_minuts">5 minuts</string>
    <string name="_60_minuts">60 minuts</string>
    <string name="top_rate">Top rate</string>
    <string name="search_title">Search</string>
    <string name="gift_title">Gift title</string>
    <string name="server_url">Server url</string>
    <string name="registrate_user_">Registrate user:</string>
    <string name="title_activity_content_generate">ContentGenerateActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="generate_some_content">Generate some content</string>
    <string name="title">Title</string>
    <string name="loading_">Loading&#8230;</string>
    <string name="there_are_no_gifts">There are no gifts</string>
    <string name="clear_cache">Clear cache</string>
    <string name="todo">TODO</string>
    <string name="author">Author</string>
    <string name="touches">Touches</string>
    <string name="refresh">Refresh</string>
    <string name="show_obscene_gifts">show obscene gifts</string>

</resources>
