<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_every_"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <RadioGroup
        android:id="@+id/update_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_minut_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_1_minute" />

        <RadioButton
            android:id="@+id/radio_minut_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_minuts" />

        <RadioButton
            android:id="@+id/radio_minut_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_60_minuts" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clearCache"
        android:text="@string/clear_cache" />

</LinearLayout>